@@ -1,4 +1,5 @@
 * 0.11.3 (unreleased)
+   * Added more checks so tutorial messages don't appear in claimed systems
    * Fixed blinking not breaking stealth
    * Fixed auto-hail message colouring
    * Only do updates with positive delta ticks
